fix(SHL-6): Align todo delete button

--- a/src/features/home/shopping-item.module.css
+++ b/src/features/home/shopping-item.module.css
@@ -21,6 +21,12 @@
 }
 
 .updateButton,
-.deleteButton {
+.deleteButton,
+.deleteForm {
   flex: 0 0 auto;
+}
+
+.deleteForm {
+  display: flex;
+  align-items: center;
 }
